--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "expo": "~51.0.28",
     "expo-auth-session": "~5.5.2",
     "expo-build-properties": "~0.12.5",
+    "expo-camera": "~15.0.16",
     "expo-constants": "~16.0.2",
     "expo-dev-client": "~4.0.28",
     "expo-font": "~12.0.9",
@@ -49,13 +50,14 @@
     "react-native-screens": "3.31.1",
     "react-native-web": "~0.19.10",
     "tailwindcss": "^3.4.14",
-    "expo-camera": "~15.0.16"
+    "uuid": "^11.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/jest": "^29.5.12",
     "@types/react": "~18.2.45",
     "@types/react-test-renderer": "^18.0.7",
+    "@types/uuid": "^10.0.0",
     "jest": "^29.2.1",
     "jest-expo": "~51.0.3",
     "react-test-renderer": "18.2.0",
