--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
     "react-native-web": "~0.19.10",
+    "react-router-native": "^6.27.0",
     "tailwindcss": "^3.4.14",
     "uuid": "^11.0.2"
   },
