--- a/package.json
+++ b/package.json
@@ -51,7 +51,8 @@
     "react-native-web": "~0.19.10",
     "react-router-native": "^6.27.0",
     "tailwindcss": "^3.4.14",
-    "uuid": "^11.0.2"
+    "uuid": "^11.0.2",
+    "expo-blur": "~13.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
